modules/security/main.tf
# webapp security group
resource "aws_security_group" "application_security_group" {
  name        = "application-security-group"
  description = "Security group for web application EC2 instances"
  #   vpc_id      = aws_vpc.my_vpc.id
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "application security group" }
}

# database security group
resource "aws_security_group" "db_security_group" {
  name        = "database-security-group"
  description = "Security group for RDS instances"
  vpc_id      = var.vpc_id

  ingress {
    description     = "Allow MySQL from Application SG"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.application_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Database Security Group"
  }
}
